# rhythmpnp

./: ChangeLog  Makefile.am  ProjectHome.md  README  aclocal.m4  configure  configure.ac
debian/: files
rb-include/: Readme
rb-include/lib/: rhythmbox-set-star-inline.h
rb-include/shell/: rb-playlist-manager-glue.h
src/: default-options.vala  main.vala  rhythmpnp-idevice.vala  rhythmpnp-media-library-device.vala  rhythmpnp-streaming-device.vala  rhythmpnp-utils.vala  rhythmpnpplugin.vala  upnpmedialibrarydevice.vala  upnpstreamingdevice.vala
tags/rhythmpnp_0_1_0/: autogen.sh
tags/rhythmpnp_0_1_0/debian/: copyright  rules
tags/rhythmpnp_0_1_0/rb-include/lib/: rb-marshal.h  rhythmbox-no-star-inline.h
tags/rhythmpnp_0_1_0/rb-include/shell/: rb-shell-glue.h  rb-shell-player-binding.h
tags/rhythmpnp_0_1_0/vapi/: Makefile.am  rb.vapi
tags/rhythmpnp_0_2_0/: configure  configure.ac
tags/rhythmpnp_0_2_0/debian/: control  files
tags/rhythmpnp_0_2_0/po/: POTFILES.skip
tags/rhythmpnp_0_2_0/rb-include/shell/: rb-shell-binding.h
tags/rhythmpnp_0_2_0/src/: Makefile.am  rhythmpnp-default-options.vala  rhythmpnp.rb-plugin
tags/rhythmpnp_0_2_0/vapi/: Makefile.am  rhythmdb.vapi
tags/rhythmpnp_0_2_1/: config.h.in  configure
tags/rhythmpnp_0_2_1/debian/: files
tags/rhythmpnp_0_2_1/rb-include/: Makefile.am
tags/rhythmpnp_0_2_1/rb-include/lib/: rhythmbox-unset-star-inline.h
tags/rhythmpnp_0_2_1/src/: rhythmpnp-plugin.vala
tags/rhythmpnp_0_2_1/vapi/: rb.vapi  rhythmdb.vapi
trunk/: ChangeLog  Makefile.am  aclocal.m4  configure  configure.ac
trunk/debian/: changelog
trunk/po/: POTFILES.in
trunk/rb-include/shell/: rb-shell-player-glue.h
trunk/src/: Makefile.am  iupnpdevice.vala  main.vala  rhythmpnp-default-options.vala  rhythmpnp-media-library-device.vala  rhythmpnp-plugin.vala  rhythmpnp-streaming-device.vala  rhythmpnp-utils.vala  utils.vala
trunk/vapi/: rb.vapi  rhythmdb.vapi
vapi/: Makefile.am
