NULL =

includes = \
	lib/eel-gconf-extensions.h \
	lib/eggdesktopfile.h \
	lib/eggsmclient.h \
	lib/eggsmclient-private.h \
	lib/gseal-gtk-compat.h \
	lib/mkdtemp.h \
	lib/rb-async-queue-watch.h \
	lib/rb-builder-helpers.h \
	lib/rb-cut-and-paste-code.h \
	lib/rb-debug.h \
	lib/rb-file-helpers.h \
	lib/rb-marshal.h \
	lib/rb-preferences.h \
	lib/rb-stock-icons.h \
	lib/rb-string-value-map.h \
	lib/rb-text-helpers.h \
	lib/rb-tree-dnd.h \
	lib/rb-util.h \
	lib/rhythmbox-no-star-inline.h \
	lib/rhythmbox-set-star-inline.h \
	lib/rhythmbox-unset-star-inline.h \
	rhythmdb/rb-refstring.h \
	rhythmdb/rhythmdb.h \
	rhythmdb/rhythmdb-import-job.h \
	rhythmdb/rhythmdb-private.h \
	rhythmdb/rhythmdb-property-model.h \
	rhythmdb/rhythmdb-query-model.h \
	rhythmdb/rhythmdb-query-results.h \
	rhythmdb/rhythmdb-tree.h \
	shell/rb-history.h \
	shell/rb-missing-plugins.h \
	shell/rb-module.h \
	shell/rb-playlist-manager-glue.h \
	shell/rb-playlist-manager.h \
	shell/rb-play-order.h \
	shell/rb-play-order-linear.h \
	shell/rb-play-order-linear-loop.h \
	shell/rb-play-order-queue.h \
	shell/rb-play-order-random-by-age-and-rating.h \
	shell/rb-play-order-random-by-age.h \
	shell/rb-play-order-random-by-rating.h \
	shell/rb-play-order-random-equal-weights.h \
	shell/rb-play-order-random.h \
	shell/rb-play-order-shuffle.h \
	shell/rb-plugin.h \
	shell/rb-plugin-manager.h \
	shell/rb-plugins-engine.h \
	shell/rb-python-module.h \
	shell/rb-python-plugin.h \
	shell/rb-removable-media-manager.h \
	shell/rb-shell-binding.h \
	shell/rb-shell-clipboard.h \
	shell/rb-shell-glue.h \
	shell/rb-shell.h \
	shell/rb-shell-player-binding.h \
	shell/rb-shell-player-glue.h \
	shell/rb-shell-player.h \
	shell/rb-shell-preferences.h \
	shell/rb-source-header.h \
	shell/rb-statusbar.h \
	sources/rb-import-errors-source.h \
	sources/rb-library-source.h \
	sources/rb-media-player-source.h \
	sources/rb-missing-files-source.h \
	sources/rb-playlist-source.h \
	sources/rb-playlist-xml.h \
	sources/rb-play-queue-source.h \
	sources/rb-podcast-source.h \
	sources/rb-removable-media-source.h \
	sources/rb-source-group.h \
	sources/rb-source.h \
	sources/rb-sourcelist.h \
	sources/rb-sourcelist-model.h \
	sources/rb-source-search-basic.h \
	sources/rb-source-search.h \
	sources/rb-static-playlist-source.h \
	sources/rb-streaming-source.h \
	sources/rb-auto-playlist-source.h \
	sources/rb-browser-source.h \
	widgets/gedit-message-area.h \
	widgets/gossip-cell-renderer-expander.h \
	widgets/rb-cell-renderer-pixbuf.h \
	widgets/rb-cell-renderer-rating.h \
	widgets/rb-dialog.h \
	widgets/rb-entry-view.h \
	widgets/rb-header.h \
	widgets/rb-library-browser.h \
	widgets/rb-property-view.h \
	widgets/rb-query-creator.h \
	widgets/rb-query-creator-private.h \
	widgets/rb-rating.h \
	widgets/rb-rating-helper.h \
	widgets/rb-search-entry.h \
	widgets/rb-segmented-bar.h \
	widgets/rb-song-info.h \
	widgets/rb-uri-dialog.h \
	$(NULL)

EXTRA_DIST = \
        $(includes) \
	Readme \
        $(NULL)


